# laboratorniy

Домашнее задание/: main.cpp
Домашнее задание/дз 1/: main.cpp  main2.cpp  main4.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
Домашнее задание/дз 2/: main1.cpp  main3.cpp  main6.cpp  main8.cpp  Текстовый документ.txt
Домашнее задание/дз 2/геометрические/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main8.cpp  main9.cpp
Домашнее задание/дз3/: main4.cpp
Информатика/ДЗ2/: CMakeLists.txt  customers.csv  main.cpp  products.csv  sales.csv  tabl.sql
Информатика/Лабораторная инфа 3/: laba.sql  zapros1.sql  zapros2.sql  zapros3.sql  zapros4.sql  zaprosdop1.sql  zaprosdop2.sql  zaprosdop3.sql
Информатика/РК2/задача 1/: TABLICA.sql  napolnenie.sql  transaction1.sql  zapros1.sql  zapros2.sql  zapros3.sql  zapros4.sql  zapros5.sql
Информатика/РК2/задача 2/: mainrk.cpp
Информатика/лабораторная инфа 2/: file_operations1.sh  greet_user.sh  number_check.sh  process_info.sh  simple_client.sh  simple_server.sh
Информатика/экзамен/exam_good/: CMakeLists.txt  README.md
Информатика/экзамен/exam_good/include/: Admin.h  BankCardPayment.h  Customer.h  DatabaseConnection.h  DigitalWalletPayment.h  Logger.h  Manager.h  Order.h  OrderItem.h  Payment.h  PaymentStrategy.h  Product.h  SBPPayment.h  User.h  Utils.h
Информатика/экзамен/exam_good/sql/: functions.sql  gethistory.sql  log.sql  procedures.sql  sample_data.sql  tables.sql  triggers.sql
Информатика/экзамен/exam_good/src/: Admin.cpp  BankCardPayment.cpp  Customer.cpp  DatabaseConnection.cpp  DigitalWalletPayment.cpp  Logger.cpp  Manager.cpp  Order.cpp  OrderItem.cpp  Payment.cpp  PaymentStrategy.cpp  Product.cpp  SBPPayment.cpp  User.cpp  Utils.cpp  main.cpp
ОАИП/Домашнее задание/дз 1/: main10.cpp  main11.cpp  main3.cpp  main5.cpp  main7.cpp  main8.cpp
ОАИП/Домашнее задание/дз 2/: main2.cpp  main4.cpp  main5.cpp  main7.cpp
ОАИП/Домашнее задание/дз10/: chrono1.cpp  chrono2.cpp  chrono3.cpp  chrono4.cpp  chrono5.cpp  main1.cpp  main10.cpp  main11.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
ОАИП/Домашнее задание/дз11/: main1.cpp  main10.cpp  main11.cpp  main12.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
ОАИП/Домашнее задание/дз12/: main1.cpp  main10.cpp  main11.cpp  main2.cpp  main3.cpp  main4s.cpp  main5s.cpp  main6s.cpp  main7o.cpp  main8o.cpp  main9.cpp
ОАИП/Домашнее задание/дз3/: main1.cpp  main10.cpp  main11.cpp  main12.cpp  main2.cpp  main3.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
ОАИП/Домашнее задание/дз5/: main1.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
ОАИП/Домашнее задание/дз6/: main1.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main16.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
ОАИП/Домашнее задание/дз7/: main1.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  (+11 more)
ОАИП/лаба 4/: CMakeLists.txt  main.cpp
ОАИП/лаба 4/include/library_manager/: Author.h  Book.h  BorrowedBook.h  Database.h  LibraryManager.h  Logger.h  Pair.h  User.h
ОАИП/лаба 4/src/: Author.cpp  Book.cpp  BorrowedBook.cpp  Database.cpp  LibraryManager.cpp  Logger.cpp  User.cpp
ОАИП/лабораторная ОАИП 2/: main1.cpp
ОАИП/лабораторная ОАИП 3/: main.cpp  orders.txt
лаба 1/: FileName.cpp  FileName1.cpp
лаба 1/laboratornai1/: laboratornai1.sln
лаба 1/лабораторная ОАИП 1/: main.cpp
(+30 files in other folders)
